# depthai-test

./: .gitignore  CMakeLists.txt
src/: main.cpp  rgb_video.cpp
